--- a/time-work-selector/src/main/res/values/strings.xml
+++ b/time-work-selector/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">time-work-Selector</string>
-    <string name="cancel">取消</string>
-    <string name="confirm">选择</string>
-    <string name="select_time">请选择时间</string>
-    <string name="year">年</string>
-    <string name="month">月</string>
-    <string name="day">日</string>
-    <string name="hour">时</string>
-    <string name="minute">分</string>
-    <string name="up_work">上半班</string>
-    <string name="down_work">下半班</string>
+    <string name="timeselector_cancel">取消</string>
+    <string name="timeselector_confirm">选择</string>
+    <string name="timeselector_select_time">请选择时间</string>
+    <string name="timeselector_year">年</string>
+    <string name="timeselector_month">月</string>
+    <string name="timeselector_day">日</string>
+    <string name="timeselector_hour">时</string>
+    <string name="timeselector_minute">分</string>
+    <string name="timeselector_up_work">上半班</string>
+    <string name="timeselector_down_work">下半班</string>
 
 </resources>
